--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,9 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
+  --foreground-rgb: 255, 255, 255;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
@@ -30,4 +30,14 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+} */
+
+:root {
+  --primary-color: #0057ff;
+  --text-color: #231f20;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
