--- a/src/components/header/navigation.module.css
+++ b/src/components/header/navigation.module.css
@@ -13,21 +13,26 @@
   display: flex;
 }
 
-.allCategory {
+.categoryIcon {
   font-size: 2.3rem;
   cursor: pointer;
   margin-right: 25px;
 }
 
-.allCategory:hover {
+.categoryIcon svg:hover {
   color: var(--primary-color);
 }
 
-.list li {
+.tab {
   display: flex;
   align-items: center;
   font-size: 1.1rem;
   font-weight: 600;
+  margin-right: 25px;
+}
+
+.tab:hover {
+  color: var(--primary-color);
 }
 
 .list svg {
