[#17] Feat: 회원가입,로그인
react-hook-form 적용

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,3 +55,9 @@ main {
   height: calc(100% - 171px);
   padding: 0 250px 0 250px;
 }
+
+button {
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
