[#20] Design : 1대1 채팅방 UI 퍼블리싱 채팅방이 존재하는지를 useState를 통해 상태를 체크하여 상태 값에 따라 다른 화면 보여지도록 구현. 입력한 채팅메시지 채팅방에 보이도록 구현.

--- a/src/app/(talks)/talks/page.module.css
+++ b/src/app/(talks)/talks/page.module.css
@@ -129,10 +129,7 @@
 	font-size: medium;
 }
 
-.chatting {
-	
-	
-}
+
 
 .chatView {
 	padding-top: 30px;
@@ -213,4 +210,40 @@
 
 .inputMsg:focus {
 	outline: 1px solid lightgray;
+}
+
+.noChatRoom {
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	
+}
+
+.height {
+	height: 90%
+}
+
+.noRoom svg {
+	font-size: 75px;
+}
+
+.noChat svg {
+	font-size: 75px;
+}
+
+.noChatFont {
+	font-size: larger;
+	text-align: center;
+	font-weight: bold;
+}
+
+.chatIcon {
+	display: flex;
+	justify-content: center;
+}
+
+.noChatFontSmall {
+	font-size: medium;
+	text-align: center;
 }
