[#17] Style: 스크롤생기면 Main영역 좁아짐 수정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,6 +51,11 @@ body {
   height: 100%;
 }
 
+/* 스크롤 너비만큼 main영역이 좁아져서 숨김 */
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+
 main {
   height: calc(100% - 171px);
   padding: 0 250px 0 250px;
