#6 Design 회원정보수정 버튼 css수정

--- a/src/app/(shop)/shop/update/page.module.css
+++ b/src/app/(shop)/shop/update/page.module.css
@@ -6,9 +6,14 @@
   }
 .buttondiv{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     padding: 50px 50px 50px 50px;
     
+}
+.outButton{
+    background-color: orange;
+    color: white;
+    width: 100px;
 }
 
 .input{
@@ -33,11 +38,6 @@
     height: 200px;
 }
 
-.outButton{
-    background-color: orange;
-    color: white;
-    width: 100px;
-}
 .form{
     text-align : left;
 
