[#26] Feat: 상품상세 이미지,입찰수

--- a/src/components/products/ProductDetailInfo.module.css
+++ b/src/components/products/ProductDetailInfo.module.css
@@ -73,6 +73,10 @@
   grid-template-columns: 120px auto;
 }
 
+.label {
+  font-weight: 600;
+}
+
 /*
  * 버튼영역
  */
@@ -147,7 +151,7 @@
 }
 
 .userInfo img {
-  width: 80;
+  width: 80px;
   height: 80px;
   border-radius: 50%;
 }
@@ -159,8 +163,8 @@
 
 .followBtn {
   width: 100%;
-  padding: 5px;
+  padding: 10px 5px;
 
   background-color: white;
-  border: 1px solid grey;
+  border: 1px solid rgb(209, 209, 209);
 }
