[#28Fix] : 아코디언 기능,css 수정 및 백앤드 연결

--- a/src/app/(notice)/notice/faq/page.module.css
+++ b/src/app/(notice)/notice/faq/page.module.css
@@ -29,10 +29,15 @@
 
 .noticeDiv{
 	border: 2px solid rgba(121, 121, 121, 0.5);
+	 /*display: flex;*/
+	 justify-content: space-between;
+}
+.noticeisOpen{
 	display: flex;
 	justify-content: space-between;
+	border: 2px solid rgba(121, 121, 121, 0.5);
+	align-content: center;
 }
-
 
 
 
