--- a/src/app/(chats)/chats/[id]/page.module.css
+++ b/src/app/(chats)/chats/[id]/page.module.css
@@ -67,7 +67,8 @@
 	border-bottom: 1px solid lightgray;
 	overflow: auto;
 	/* flex-direction: column; */ /* 해당 줄 주석 처리 또는 삭제 */
-	display: block; /* 세로로 배치되도록 변경 */
+	display: flex; /* 세로로 배치되도록 변경 */
+	flex-direction:column-reverse;
 }
 
 
