--- a/src/components/products/ProductDetailInfo.module.css
+++ b/src/components/products/ProductDetailInfo.module.css
@@ -3,6 +3,17 @@
   color: var(--text-color);
 }
 
+.alert {
+  padding: 10px;
+  text-align: center;
+  background-color: rgb(44, 44, 44);
+  color: white;
+  /* border-radius: 15px; */
+  font-size: 1rem;
+  margin-bottom: 15px;
+  letter-spacing: 2px;
+}
+
 .sectionTop {
   height: 500px;
   /* background-color: red; */
@@ -98,7 +109,8 @@
 
 .btnContainer button {
   padding: 22px;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
+  font-weight: 600;
   cursor: pointer;
   /* border-radius: 12px; */
   color: white;
@@ -109,7 +121,7 @@
 }
 
 .btnChat {
-  background-color: #333333;
+  background-color: rgb(5, 5, 5);
 }
 
 .btnBid {
@@ -117,7 +129,8 @@
 }
 
 .btnCool {
-  background-color: orange;
+  background-color: rgb(0, 255, 162);
+  color: black !important;
 }
 
 /*
