--- a/src/app/search/page.module.css
+++ b/src/app/search/page.module.css
@@ -44,7 +44,7 @@
 .productList {
   padding: 30px 0;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(6, 1fr);
   gap: 15px;
 }
 
