--- a/src/components/products/ProductCard/ProductCard.module.css
+++ b/src/components/products/ProductCard/ProductCard.module.css
@@ -1,6 +1,6 @@
 .productCard {
   cursor: pointer;
-  border: 1px solid rgb(233, 233, 233);
+  /* border: 1px solid rgb(233, 233, 233); */
   border-radius: 7px;
 }
 
@@ -24,6 +24,7 @@
 }
 
 .productTitle {
+  font-size: 1rem;
   margin: 10px 0;
   width: 95%;
   overflow: hidden;
@@ -31,12 +32,14 @@
   text-overflow: ellipsis;
 }
 
-.textRow {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  margin-bottom: 5px;
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
   font-size: 0.9rem;
 }
 
-.rowLabel {
+.footer h1 {
+  font-size: 1.2rem;
+  font-weight: 600;
 }
