[#35] Fix: 상품상세페이지 CSC로 교체

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -58,6 +58,12 @@
 .iconContainer {
   margin-left: 40px;
   cursor: pointer;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.iconContainer:hover {
+  background-color: rgb(243, 243, 243);
 }
 
 .iconContainer a {
