--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,6 +66,11 @@ button {
   border: none;
   cursor: pointer;
 }
+
+button:hover {
+  opacity: 0.96;
+}
+
 .disabled {
   opacity: 0.6;
   cursor: not-allowed !important;
