--- a/src/app/(auth)/auth/layout.module.css
+++ b/src/app/(auth)/auth/layout.module.css
@@ -2,25 +2,55 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   height: 100%;
 }
 
 .formContainer {
   width: 350px;
   border: 1px solid rgb(223, 223, 223);
-  border-radius: 10px;
-  padding: 35px 20px 25px 20px;
+  padding: 45px 42px;
 }
 
 .formContainer h1 {
-  font-size: 2rem;
-  font-weight: 600;
-  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 800;
+  color: var(--primary-color);
+  margin: 15px 0;
 }
 
 .formContainer h3 {
   font-size: 1.2rem;
-  font-weight: 500;
-  text-align: left;
+  font-weight: 600;
+}
+
+.formContainer input {
+  width: 100%;
+  padding: 15px 30px;
+  box-sizing: border-box;
+  font-size: 1rem;
+  border: none;
+  outline: none;
+  background-color: #f8f8f8;
+  border-radius: 8px;
+  color: #4c4c4c;
+  display: inline-block;
+  margin: 10px 0;
+}
+
+.formContainer input::placeholder {
+  color: rgb(205, 205, 205);
+  font-weight: 600;
+}
+
+.formContainer button {
+  border-radius: 8px;
+  font-weight: 600;
+
+  width: 100%;
+  padding: 15px 10px;
+  background: var(--primary-color);
+  color: #c1ff72;
+  /* font-weight: 600; */
+  font-size: 1rem;
+  margin-top: 15px;
 }
