--- a/src/components/header/navigation.module.css
+++ b/src/components/header/navigation.module.css
@@ -51,3 +51,22 @@
   margin-left: 25px;
   color: rgb(171, 171, 171);
 }
+
+.userInfoContainer {
+  display: flex;
+  align-items: center;
+  color: rgb(53, 53, 53) !important;
+}
+
+.logoutContainer {
+  display: flex;
+  align-items: center;
+}
+
+.profileImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 10px;
+}
