[#28] Feat : faq css 수정 및 페이징 기능 추가

--- a/src/app/(notice)/notice/faq/page.module.css
+++ b/src/app/(notice)/notice/faq/page.module.css
@@ -6,7 +6,7 @@
 
 .noticeAside{
 	width: 130px;
-	position: fixed;
+
 }
 
 .noticeNotice{
@@ -87,7 +87,7 @@
 
 
 .container {
-	position: fixed;
+	position: absolute;
 	background: var(--clr-white);
 	border-radius: var(--radius);
 	max-width: var(--fixed-width);
