--- a/src/app/(chats)/chats/[id]/page.module.css
+++ b/src/app/(chats)/chats/[id]/page.module.css
@@ -78,13 +78,16 @@
 	display: flex;
 	align-items:end;
 	margin-bottom: 10px;
-	justify-content: flex-start
+	justify-content: flex-start;
+	
 }
 
 .opponentMsg {
 	border: 1px solid lightgray;
 	border-radius: 30px;
-	padding : 15px 15px 15px 15px
+	padding : 15px 15px 15px 15px;
+	max-width: 500px;
+	word-break: break-all;
 }
 
 .opponentTime {
@@ -114,6 +117,8 @@
 	background-color: var(--primary-color);
 	border-radius: 30px;
 	padding : 15px 15px 15px 15px;
+	max-width: 500px;
+	word-break: break-all;
 	
 }
 
