--- a/src/app/(chats)/chats/[id]/page.module.css
+++ b/src/app/(chats)/chats/[id]/page.module.css
@@ -175,3 +175,29 @@
 	overflow: auto;
 	
 }
+
+.safeTradeDiv {
+	display: flex;
+	justify-content: end;
+	width: 590px;
+}
+
+.safeTradeBtn {
+	border: 2px solid var(--primary-color);
+	border-radius: 30px;
+	height: 50px;
+	font-size: 20px;
+	font-weight: 900;
+	color: white;
+	background-color: var(--primary-color);
+	margin-bottom: 10px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: left;
+}
+.safeIcon {
+	padding-top : 4px;
+	color: rgb(47, 255, 5);
+	font-size: larger;
+}
