--- a/src/app/(chats)/chats/[id]/page.module.css
+++ b/src/app/(chats)/chats/[id]/page.module.css
@@ -234,3 +234,38 @@
 	justify-content: left;
 	margin-right: 5px
 }
+.pay {
+	display: flex;
+	justify-content: space-between;
+}
+.safeTrading {
+	color: var(--primary-color);
+	margin-right: 110px;
+	font-size: 30px;
+	font-weight: bold;
+	
+}
+.safeTrading2 {
+	color: var(--primary-color);
+	margin-right: 160px;
+	font-size: 30px;
+	font-weight: bold;
+	margin-bottom: 35px;
+}
+.payBtn {
+	border: 2px solid black;
+	border-radius: 30px;
+	height: 50px;
+	font-size: 17px;
+	font-weight: 600;
+	color: rgb(158, 255, 47);
+	background-color: black;
+	margin-bottom: 10px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: left;
+	margin-right: 20px;
+	width: 80px;
+	
+}
