--- a/src/app/qna/page.module.css
+++ b/src/app/qna/page.module.css
@@ -235,3 +235,14 @@
 	text-align: center;
 	
 }
+
+.qnaInquirtButtonInquirtOff{
+	margin: 0 5px 0 5px;
+
+	font-size: 15px;
+	font-weight: 550;
+	width: 100px;
+	height: 50px;
+	border-radius: 5px;
+
+}
