--- a/src/components/products/ProductsNewForm.module.css
+++ b/src/components/products/ProductsNewForm.module.css
@@ -57,7 +57,7 @@
 }
 
 .images li:first-child {
-  border: 1px solid grey;
+  /* border: 1px solid grey; */
 }
 
 .images li > svg {
@@ -92,6 +92,11 @@
   padding: 15px;
   box-sizing: border-box;
   font-size: 0.9rem;
+  background-color: #f8f8f8;
+  border-radius: 8px;
+  color: #4c4c4c;
+  border: none;
+  outline: none;
 }
 
 .categoryList {
@@ -123,6 +128,11 @@
   box-sizing: border-box;
   font-size: 0.9rem;
   resize: none;
+  background-color: #f8f8f8;
+  border-radius: 8px;
+  color: #4c4c4c;
+  border: none;
+  outline: none;
 }
 
 .footer {
@@ -142,4 +152,20 @@
   border: none;
   color: white;
   cursor: pointer;
+}
+
+.small {
+  font-size: 0.9rem;
+  font-weight: 400;
+  color: rgb(128, 128, 128);
+}
+
+.error {
+  margin-top: 5px;
+  font-size: 0.9rem;
+  color: dodgerblue;
+}
+
+.required {
+  color: dodgerblue;
 }
