--- a/src/components/header/navigation.module.css
+++ b/src/components/header/navigation.module.css
@@ -70,3 +70,13 @@
   display: inline-block;
   margin-right: 10px;
 }
+
+.paymentBtn {
+  font-size: 0.8rem;
+  border-radius: 3px;
+  background-color: black;
+  color: white;
+  padding: 3px 5px;
+  margin-left: 10px;
+  cursor: pointer;
+}
