[#72] Fix 공지사항 필수값체크, 비어있을시 메시지, 타이틀 입력안되는 버그 수정

--- a/src/app/(notice)/notice/page.module.css
+++ b/src/app/(notice)/notice/page.module.css
@@ -118,3 +118,10 @@
 	height: 50px;
 	border-radius: 5px;
 }
+.nullNotice{
+	justify-content: center;
+	align-content: center;
+	text-align: center;
+	font-size: 30px;
+	background-color: rgb(203, 202, 202);
+}
