--- a/src/app/(chats)/chats/[id]/page.module.css
+++ b/src/app/(chats)/chats/[id]/page.module.css
@@ -256,3 +256,24 @@
   margin-right: 20px;
   width: 80px;
 }
+
+.confirm {
+  display: flex;
+  justify-content: space-between;
+}
+
+.confirmBtn {
+  border: 2px solid var(--primary-color);
+  border-radius: 30px;
+  height: 50px;
+  font-size: 17px;
+  font-weight: 900;
+  color: white;
+  background-color: var(--primary-color);
+  margin-bottom: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  margin-right: 5px;
+}
