Feat: 마이페이지 메뉴바 본인일때만 보이게,,

--- a/src/components/shop/shop-info.module.css
+++ b/src/components/shop/shop-info.module.css
@@ -42,7 +42,8 @@
 .headerRight div {
   width: 80px;
   height: 80px;
-  background-color: aliceblue;
+  border: 1px solid rgb(0, 136, 255);
+  /* color: white; */
   border-radius: 50%;
   font-size: 1rem;
   margin-left: 10px;
@@ -52,10 +53,11 @@
 }
 
 .introContainer {
-  width: fit-content;
+  /* width: fit-content; */
+  min-height: 150px;
   margin-top: 15px;
-  padding: 10px 15px;
-  background: aliceblue;
+  padding: 20px 15px;
+  background: rgb(228, 228, 228);
   border-radius: 8px;
   font-size: 1rem;
 }
