--- a/src/app/qna/page.module.css
+++ b/src/app/qna/page.module.css
@@ -65,6 +65,7 @@
 }
 
 .qnaHistoryTag{
+	display: inline-block;
 	margin: 20px 0 0 15px;
 	font-size: 15px;
 	font-weight: 500;
@@ -268,4 +269,20 @@
 .qnaManagerButton{
 	font-weight: 650;
 	color: rgb(95, 95, 95);
+}
+
+.qnaHistorAnswerNot{
+	margin-top: 20px;
+	font-size: 15px;
+	margin-right: 15px;
+	display: inline-block;
+	color: red;
+	float: right;
+}
+.qnaHistorAnswerOk{
+	display: inline-block;
+	margin-top: 20px;
+	font-size: 15px;
+	margin-right: 15px;
+	float: right;
 }
