--- a/src/components/products/ProductCard/ProductCard.module.css
+++ b/src/components/products/ProductCard/ProductCard.module.css
@@ -2,6 +2,7 @@
   cursor: pointer;
   /* border: 1px solid rgb(233, 233, 233); */
   border-radius: 7px;
+  position: relative;
 }
 
 .cardThumbnail {
@@ -46,4 +47,17 @@
 
 .createDate {
   color: rgb(151, 151, 151);
+}
+
+.deleted {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.66);
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.6rem;
+  color: white;
 }
