--- a/src/components/products/ProductDetailInfo.module.css
+++ b/src/components/products/ProductDetailInfo.module.css
@@ -198,7 +198,15 @@
 .followBtn {
   width: 100%;
   padding: 10px 5px;
-
+  color : var(--primary-color);
   background-color: white;
-  border: 1px solid rgb(209, 209, 209);
+  border: 1px solid var(--primary-color);
+  font-weight: bold;
+}
+.followedBtn {
+  width: 100%;
+  padding: 10px 5px;
+  background-color: var(--primary-color);
+  color: white;
+  font-weight: bold;
 }
