--- a/src/app/(shop)/shop/[id]/favorites/page.module.css
+++ b/src/app/(shop)/shop/[id]/favorites/page.module.css
@@ -1,7 +1,7 @@
 .title {
 	font-size:1.8rem;
 	font-weight: 600;
-	height: 150px;
+	height: 100px;
 }
 
 .container {
@@ -17,7 +17,8 @@
 
 .totalCount {
   font-weight: 600;
-  font-size: larger;
+  font-size: 20px;
+  color: var(--primary-color);
 }
 
 
