[feat]#115 게스트페이지 팔로우/팔로잉 목록 평점표시

--- a/src/components/shop/followCard.module.css
+++ b/src/components/shop/followCard.module.css
@@ -47,3 +47,8 @@
 	color: var(--primary-color);
 	border : 1px solid var(--primary-color);
 }
+.followNo {
+	background-color: lightgray;
+	color: white;
+	
+}
