--- a/src/app/(chats)/chats/layout.module.css
+++ b/src/app/(chats)/chats/layout.module.css
@@ -30,16 +30,23 @@
   background-color: rgb(240, 240, 240);
 }
 
+.imageContainer {
+  height: 0;
+}
 .profileImg {
+  
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  object-fit:cover
 }
 
 .productImg {
+  
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  
 }
 
 .shortcut {
