--- a/src/app/(chats)/chats/[id]/page.module.css
+++ b/src/app/(chats)/chats/[id]/page.module.css
@@ -120,6 +120,7 @@
   padding: 15px 15px 15px 15px;
   max-width: 500px;
   word-break: break-all;
+  font-weight: 500;
 }
 
 .opponentTime {
@@ -151,6 +152,7 @@
   padding: 15px 15px 15px 15px;
   max-width: 500px;
   word-break: break-all;
+  font-weight: 500;
 }
 
 .meTime {
@@ -186,14 +188,14 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  object-fit:cover
+  
 }
 
 .productImg {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  object-fit:cover
+  
 }
 
 .chatRoom {
@@ -220,7 +222,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 0.3s, color 0.3s, border-color 0.3s, transform 0.3s; /* Smooth transition effect */
+  transition: 0.3s 
 }
 
 .safeTradeBtn:hover {
@@ -228,7 +230,7 @@
   font-weight: 600;
   color: var(--primary-color);
   border: 2px solid var(--primary-color);
-  transform: scale(1.2); /* Slightly increase the scale on hover */
+  transform: scale(1.2); 
 }
 
 
@@ -258,7 +260,7 @@
   align-items: center;
   justify-content: left;
   margin-right: 20px;
-  transition: background-color 0.3s, color 0.3s, border-color 0.3s, transform 0.3s; /* Transition for hover effect */
+  transition: 0.3s
 }
 
 .safeTradeBtnAccept:hover {
@@ -284,7 +286,7 @@
   align-items: center;
   justify-content: left;
   margin-right: 5px;
-  transition: background-color 0.3s, color 0.3s, border-color 0.3s, transform 0.3s; 
+  transition: 0.3s
 }
 
 .safeTradeBtnRefuse:hover {
@@ -325,8 +327,8 @@
   font-weight: bold;
   margin-left: 10px;
 }
+
 .payBtn {
-  border: 2px solid black;
   border-radius: 30px;
   height: 40px;
   font-size: 17px;
@@ -334,23 +336,48 @@
   color: rgb(158, 255, 47);
   background-color: black;
   margin-bottom: 10px;
-  text-align: right;
+  text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-right: 10px;
   width: 110px;
-  transition: background-color 0.3s, color 0.3s, border-color 0.3s, transform 0.3s;
+  border: none;
+  outline: none;
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
 }
 
 .payBtn:hover {
-  color: black;
-  font-weight: 900;
-  background: rgb(158, 255, 47);
-  box-shadow: none;
-  border-color: rgb(158, 255, 47); 
-  transform: scale(1.1);
+  
+  box-shadow: 0 0 10px rgba(158, 255, 47, 1); 
 }
+
+.payBtn span {
+  position: relative;
+  z-index: 1;
+  color: rgb(158, 255, 47);
+  transition: color .3s ease-in-out;
+}
+
+.payBtn:hover span {
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  background-size: 400%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: glowingText 20s linear infinite;
+}
+
+
+@keyframes glowingText {
+  0% { background-position: 0 0; }
+  50% { background-position: 400% 0; }
+  100% { background-position: 0 0; }
+}
+
 
 
 .confirm {
@@ -373,7 +400,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 2s, color 0.3s, border-color 0.3s, transform 0.3s;
+  transition: 0.3s
   
 } 
 
@@ -384,7 +411,7 @@
   box-shadow: none;
   border-color: var(--primary-color); 
   transform: scale(1.1);
-  transition: background-color 2s, color 0.3s, border-color 0.3s, transform 0.3s;
+  transition: 0.3s
 }
 
 .wait {
@@ -407,32 +434,24 @@
   width: 100%;
 }
 
-/* .reviewBtn {
 
-}
-.heartBtn {
-  color: var(--primary-color);
-  width: 40px;
-  height: 40px;
-  padding-left: 23px;
-} */
 .reviewBtn {
-  background-color: white; /* 버튼의 배경색을 흰색으로 설정 */
-  border: none; /* 버튼의 테두리 제거 */
-  padding: 0; /* 내부 패딩 제거 */
-  margin-left: 20px; /* 입력 창과의 간격을 조정 */
+  background-color: white; 
+  border: none; 
+  padding: 0; 
+  margin-left: 20px; 
 }
 
 .reviewBtn:active {
-  transform: translateY(2px); /* 클릭 시 버튼을 아래로 이동하여 눌린 효과 표시 */
+  transform: translateY(2px); 
 }
 
 .heartBtn {
   color: rgb(255, 128, 128);
   width: 40px;
   height: 40px;
-  padding: 0; /* 아이콘 주위의 내부 패딩 제거 */
-  transition: background-color 2s, color 0.3s, border-color 0.3s, transform 0.3s;
+  padding: 0; 
+  transition: 0.3s
 }
 
 .heartBtn:hover {
@@ -441,7 +460,7 @@
   box-shadow: none;
   border-color: var(--primary-color); 
   transform: scale(1.1);
-  transition: background-color 2s, color 0.3s, border-color 0.3s, transform 0.3s;
+  transition: 0.3s
 }
 
 
