--- a/src/components/etc/etcsidebar.module.css
+++ b/src/components/etc/etcsidebar.module.css
@@ -18,3 +18,11 @@
 	list-style: none;
 	font-size: 15px;
 }
+
+.etcAsideSerch{
+	margin-top: 15px;
+	list-style: none;
+	font-size: 15px;
+	color: rgb(56, 56, 255);
+
+}
