[#119] Fix: FAQ 새글 등록버튼 CSS 수정, FAQ 수정 화면 목록가기 버튼 추가 및 CSS 수정

--- a/src/app/faq/page.module.css
+++ b/src/app/faq/page.module.css
@@ -124,3 +124,8 @@
 	align-self: center;
 	min-width: 2rem;
 }
+.faqnewbutton{
+	width: 10%;
+	background-color: var(--primary-color) !important;
+	color: white;
+}
