--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -14,6 +14,7 @@
 .mainLeft {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .mainLeft img {
@@ -46,6 +47,47 @@
 
 .searchInput::placeholder {
   color: var(--primary-color);
+}
+
+.searchHistoryContainer {
+  width: 22vw;
+  height: 300px;
+  z-index: 10;
+  border: 1px solid rgb(219, 219, 219);
+  background-color: white;
+  position: absolute;
+  left: 190px;
+  top: 55px;
+  padding: 20px 15px;
+  box-sizing: border-box;
+  overflow-y: scroll;
+}
+
+.searchHistoryContainer h3 {
+  font-weight: 600;
+  font-size: 1.2rem;
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.historyAllRemove {
+  font-size: 1rem;
+  color: grey;
+  font-weight: normal;
+  cursor: pointer;
+}
+
+.searchHistoryContainer li {
+  padding: 10px 2px;
+  display: flex;
+  justify-content: space-between;
+  color: rgb(70, 70, 70);
+  font-size: 1rem;
+}
+
+.searchHistoryContainer li > span {
+  cursor: pointer;
 }
 
 .mainRight {
