[fix]#136 채팅방 관련 각종 버그 수정 및 css 수정 채팅방 새로 고침하면 채팅친거 복사되서 하나 더 나오는 버그 수정. 채팅방 목록/채팅내용 화면 스크롤 표시 제거 채팅방 목록 개수 표시해주기 안전거래 요청을 confirm창에서 모달창으로 변경 안전거래 관련 버튼 css 일부 수정

--- a/src/app/(chats)/chats/layout.module.css
+++ b/src/app/(chats)/chats/layout.module.css
@@ -10,11 +10,21 @@
   border: 1px solid rgb(240, 240, 240);
 }
 
+.chatsCnt {
+  color: var(--primary-color);
+}
+
 .chatsContainer {
   width: 45%;
   padding-top: 30px;
-  overflow: auto;
+  -ms-overflow-style: none; 
+  scrollbar-width: none;
+  overflow-y: scroll; 
   border-right: 1px solid rgb(240, 240, 240);
+}
+
+.chatsContainer::-webkit-scrollbar {
+  display: none; 
 }
 
 .chatsTitle {
@@ -34,6 +44,10 @@
 .imageContainer {
   height: 0;
 }
+.imageContainerP {
+  height: 0;
+  padding-right: 50px;
+}
 .profileImg {
   
   width: 50px;
@@ -43,11 +57,10 @@
 }
 
 .productImg {
-  
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  
+  position: fixed;
 }
 
 .shortcut {
@@ -132,7 +145,13 @@
   text-align: center;
 }
 
-.sellerBuyer {
+.seller {
+  font-weight: 500;
+  color: red;
+  padding-right: 2px;
+}
+
+.buyer {
   font-weight: 500;
   color: var(--primary-color);
   padding-right: 2px;
