--- a/src/app/(chats)/chats/[id]/page.module.css
+++ b/src/app/(chats)/chats/[id]/page.module.css
@@ -14,14 +14,14 @@
 }
 
 .reloadBtn {
-  background-color: white; /* 버튼의 배경색을 흰색으로 설정 */
-  border: none; /* 버튼의 테두리 제거 */
-  padding: 0; /* 내부 패딩 제거 */
+  background-color: white; 
+  border: none; 
+  padding: 0; 
   
 }
 
 .reloadBtn:active {
-  transform: translateY(2px); /* 클릭 시 버튼을 아래로 이동하여 눌린 효과 표시 */
+  transform: translateY(2px); 
 }
 
 .reloadIcon {
@@ -101,10 +101,16 @@
   padding-right: 30px;
   height: 600px;
   border-bottom: 1px solid lightgray;
-  overflow: auto;
-  display: flex; /* 세로로 배치되도록 변경 */
+  display: flex; 
   flex-direction: column-reverse;
   font-size: 0.9rem;
+  -ms-overflow-style: none; 
+  overflow-y: scroll; 
+}
+
+
+.chatView::-webkit-scrollbar {
+  display: none; 
 }
 
 .opponent {
@@ -125,8 +131,9 @@
 
 .opponentTime {
   font-size: smaller;
-  color: lightgray;
+  color: gray;
   padding-left: 10px;
+  white-space: nowrap; 
 }
 
 .me {
@@ -157,8 +164,9 @@
 
 .meTime {
   font-size: smaller;
-  color: lightgray;
+  color: gray;
   padding-right: 10px;
+  white-space: nowrap; 
 }
 
 .chatInput {
@@ -202,7 +210,14 @@
   padding-top: 20px;
   max-height: 100%;
   width: 65%;
-  overflow: auto;
+  -ms-overflow-style: none; 
+  scrollbar-width: none;
+  overflow-y: scroll; 
+}
+
+
+.chatRoom::-webkit-scrollbar {
+  display: none; 
 }
 
 .safeTradeDiv {
@@ -230,7 +245,7 @@
   font-weight: 600;
   color: var(--primary-color);
   border: 2px solid var(--primary-color);
-  transform: scale(1.2); 
+  transform: scale(1.1); 
 }
 
 
@@ -246,56 +261,54 @@
 .safeTradeSeller {
   display: flex;
 }
+
 .safeTradeBtnAccept {
-  border: 2px solid var(--primary-color);
-  border-radius: 30px;
-  height: 50px;
-  font-size: 17px;
-  font-weight: 900;
+  border-radius: 15px;
+  border: 2px solid white;
+  font-size: 0.9rem;
+  font-weight: 600;
   color: white;
   background-color: var(--primary-color);
-  margin-bottom: 10px;
-  text-align: center;
+  text-align: right;
   display: flex;
   align-items: center;
-  justify-content: left;
-  margin-right: 20px;
-  transition: 0.3s
+  justify-content: right;
+  transition: 0.3s;
+  height: 30px;
+  margin-right: 5px;
+  padding-bottom: 3px;
 }
 
 .safeTradeBtnAccept:hover {
+  background-color: white;
+  font-weight: 600;
   color: var(--primary-color);
-  font-weight: 900;
-  background: transparent;
-  box-shadow: none;
-  border-color: var(--primary-color); 
-  transform: scale(1.2);
+  border: 2px solid var(--primary-color);
+  transform: scale(1.1); 
 }
 
 .safeTradeBtnRefuse {
-  border: 2px solid red;
-  border-radius: 30px;
-  height: 50px;
-  font-size: 17px;
-  font-weight: 900;
+  border-radius: 15px;
+  border: 2px solid white;
+  font-size: 0.9rem;
+  font-weight: 600;
   color: white;
   background-color: red;
-  margin-bottom: 10px;
   text-align: center;
   display: flex;
   align-items: center;
-  justify-content: left;
-  margin-right: 5px;
-  transition: 0.3s
+  justify-content: center;
+  transition: 0.3s; 
+  height: 30px;
+  padding-bottom: 3px;
 }
 
 .safeTradeBtnRefuse:hover {
+  background-color: white;
+  font-weight: 600;
   color: red;
-  font-weight: 900;
-  background: transparent;
-  box-shadow: none;
-  border-color: red; 
-  transform: scale(1.2);
+  border: 2px solid red;
+  transform: scale(1.1); 
 }
 
 
@@ -325,7 +338,8 @@
   color: var(--primary-color);
   font-size: 25px;
   font-weight: bold;
-  margin-left: 10px;
+  margin-left: 15px;
+  margin-top: 9px;
 }
 
 .payBtn {
@@ -379,40 +393,64 @@
 }
 
 
-
 .confirm {
   display: flex;
   justify-content: space-between;
   width: 100%;
 }
 
+
+
 .confirmBtn {
-  border: 2px solid white;
-  border-radius: 15px;
-  height: 50px;
-  width: 100px;
-  font-size: 19px;
+  border-radius: 30px;
+  height: 40px;
+  font-size: 20px;
   font-weight: 900;
-  color: white;
-  background-image: linear-gradient(to bottom right, #adf0e1, #87ceeb, var(--primary-color), blue);
+  color: var(--primary-color);
+  background-color: white;
   margin-bottom: 10px;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: 0.3s
-  
-} 
-
- .confirmBtn:hover {
-  color: blue;
-  font-weight: 900;
-  background-image: linear-gradient(to top left, #adf0e1, #87ceeb, var(--primary-color));
-  box-shadow: none;
-  border-color: var(--primary-color); 
-  transform: scale(1.1);
-  transition: 0.3s
+  width: 110px;
+  border: 2px solid var(--primary-color);
+  outline: none;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
 }
+
+.confirmBtn:hover {
+  background-color: black;
+  box-shadow: 0 0 10px var(--primary-color);
+  border: none;
+}
+
+.confirmBtn span {
+  position: relative;
+  z-index: 1;
+  color: var(--primary-color);
+  transition: color .3s ease-in-out;
+  font-weight: 900;
+}
+
+.confirmBtn:hover span {
+  background: linear-gradient(45deg, #48ff00, #00ffd5, #00c3ff, var(--primary-color), #002bff, #7a00ff,  #002bff, var(--primary-color), #00ffd5, #00c3ff, #48ff00);
+  background-size: 400%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: glowingText 20s linear infinite;
+}
+
+
+@keyframes glowingText {
+  0% { background-position: 0 0; }
+  50% { background-position: 400% 0; }
+  100% { background-position: 0 0; }
+}
+
 
 .wait {
   color: var(--primary-color);
