--- a/src/app/(chats)/chats/[id]/page.module.css
+++ b/src/app/(chats)/chats/[id]/page.module.css
@@ -1,6 +1,6 @@
 .chatRoomHeader {
   display: flex;
-  border-bottom: 1px solid lightgray;
+  border-bottom: 1px solid rgb(240, 240, 240);
   height: 61px;
   padding-left: 20px;
   justify-content: space-between;
@@ -100,7 +100,7 @@
   padding-left: 30px;
   padding-right: 30px;
   height: 600px;
-  border-bottom: 1px solid lightgray;
+  border-bottom: 1px solid rgb(240, 240, 240);
   display: flex; 
   flex-direction: column-reverse;
   font-size: 0.9rem;
