--- a/src/app/(chats)/chats/layout.module.css
+++ b/src/app/(chats)/chats/layout.module.css
@@ -56,7 +56,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  object-fit:cover
+  
 }
 
 .productImg {
@@ -91,6 +91,7 @@
   max-width: 280px;
   overflow: hidden;
   text-overflow: ellipsis;
+  padding-top: 1px;
 }
 
 .lastMsg {
@@ -158,4 +159,24 @@
   font-weight: 500;
   color: var(--primary-color);
   padding-right: 2px;
+}
+
+.notRead {
+  border-radius: 50%;
+  background-color: orangered;
+  color: white;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  font-size: 13px;
+  transform: translateY(-1px); /* 원하는 픽셀 수로 조절 */
+  margin-left: 3px;
+}
+
+.notRead div {
+  width: 25px;
+  padding-right: 1px;
+  margin-top: 6px;
+  text-align: center;
+  font-weight: 600;
 }
