--- a/src/app/faq/newfaq/page.module.css
+++ b/src/app/faq/newfaq/page.module.css
@@ -1,29 +1,121 @@
-.faqDiv{
-	border: 2px solid rgba(121, 121, 121, 0.5);
-	 /*display: flex;*/
-	 justify-content: space-between;
-	 margin-top: 30px;
+.faqInsertMain {
+	display: flex;
+	margin-top: 50px;
 }
 
+.faqSection {
+	width: 70%;
+	margin: 0 auto;
+}
 
+.faqInquirtTop {
+	display: flex;
+	border: 2px solid rgba(121, 121, 121, 0.3);
+}
+
+.faqInquirt {
+	display: flex;
+	border: 2px solid rgba(121, 121, 121, 0.3);
+	border-top: 0;
+}
+
+.faqInquirtName {
+	align-content: center;
+	height: 80px;
+	width: 150px;
+	background-color: rgb(223, 223, 223);
+}
+
+.faqInquirtName > div {
+	margin-left: 20%;
+}
+
+.faqInquirtNameInput {
+	margin: auto;
+	width: 75%;
+	height: 40px;
+	border-radius: 5px;
+	border: 2px solid rgba(121, 121, 121, 0.3);
+	font-size: 18px;
+	word-break: keep-all;
+}
+
+.faqIpquirtContent {
+	display: flex;
+	border: 2px solid rgba(121, 121, 121, 0.3);
+	border-top: 0;
+	height: 160px;
+}
+
+.faqIpquirtContentInput {
+	font-family: 'Raleway', sans-serif;
+	font-size: 18px;
+	margin: auto;
+	width: 50%;
+	height: 100px;
+	border-radius: 5px;
+	border: 2px solid rgba(121, 121, 121, 0.3);
+	resize: none;
+}
+
+.faqInquirtButton {
+	margin-top: 15px;
+	text-align: center;
+	align-content: center;
+}
+
+.faqInquirtButtonInquirt {
+	margin: 0 5px;
+	background-color: rgb(14, 187, 255);
+	color: white;
+	font-size: 15px;
+	font-weight: 550;
+	width: 100px;
+	height: 50px;
+	border-radius: 5px;
+}
+
+.faqInquirtButtonMenu {
+	border: 2px solid rgba(121, 121, 121, 0.3);
+	background-color: rgb(255, 255, 255);
+	color: rgb(0, 0, 0);
+	font-size: 15px;
+	font-weight: 550;
+	width: 100px;
+	height: 50px;
+	border-radius: 5px;
+}
 .faqContent{
 	align-content: center;
 	text-align: left;
-	width: 60%;
-	margin-left: 20%;
+	width: 100%;
+	margin-left: 17%;
 }
 .faqButtonArea{
-	display: flex;
-	justify-content: space-between
-	
-}
+	margin-top: 15px;
+	text-align : center;
+	align-content:center;
 
-.faqUpdateButton{
+}
+.faqListButton{
+	border: 2px solid rgba(121, 121, 121, 0.3); 
+	background-color: rgb(255, 255, 255);
+	color: rgb(0, 0, 0);
+	font-size: 15px;
+	font-weight: 550;
+	width: 100px;
+	height: 50px;
+	border-radius: 5px;
+}
+.faqNewButton{
+	margin: 0 5px 0 5px;
+	background-color: rgb(14, 187, 255);
 	color: white;
-  height: 50px;
-  background-color: var(--primary-color) !important;
-  width: 100px;
-	text-align: center;
+	font-size: 15px;
+	font-weight: 550;
+	width: 100px;
+	height: 50px;
+	border-radius: 5px;
 }
 .Newfaq{
 	text-align: center;
@@ -32,6 +124,7 @@
 }
 .faqNewContent{
 	width: 60%;
+	resize: none;
 }
 .faqNewArea{
 	margin-top: 3%;
