--- a/src/app/(notice)/notice/new/page.module.css
+++ b/src/app/(notice)/notice/new/page.module.css
@@ -70,7 +70,7 @@
 	height: 100px;
 	border-radius: 5px;
 	border: 2px solid rgba(121, 121, 121, 0.3);
-	
+	resize: none;
 }
 
 .noticeInquirtButton{
