--- a/src/app/qna/page.module.css
+++ b/src/app/qna/page.module.css
@@ -187,7 +187,7 @@
 	height: 100px;
 	border-radius: 5px;
 	border: 2px solid rgba(121, 121, 121, 0.3);
-	
+	resize: none;
 }
 
 .qnaInquirtButton{
@@ -265,6 +265,7 @@
 	height: 60px;
 	border-radius: 5px;
 	border: 2px solid rgba(121, 121, 121, 0.3);
+	resize: none;
 }
 .qnaManagerButton{
 	font-weight: 650;
